Update: added vite in frontend for configurable base_url

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,6 +33,6 @@
             <section id="resultContainer" class="recipe-content hidden"></section>
         </main>
     </div>
-    <script src="js/main.js"></script>
+<script type="module" src="/js/main.js"></script>
 </body>
 </html>
