feat: added custom fonts for a sleek look

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fridge Co-Pilot | AI Recipe Generator</title>
+    <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://unpkg.com/lucide@latest"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Victor+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <a href="YOUR_GITHUB_REPO_URL_HERE" target="_blank" class="github-link" title="View on GitHub">
@@ -43,7 +40,7 @@
             <section id="resultContainer" class="recipe-content hidden"></section>
         </main>
     </div>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script type="module" src="/js/main.js"></script>
     <script>
         lucide.createIcons();
