--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,12 @@
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
 <body>
+
+<div id="dot-pattern-container" class="dot-pattern-bg">
+        <canvas id="dot-canvas"></canvas>
+        <div class="dot-vignette"></div>
+    </div>
+
     <a href="YOUR_GITHUB_REPO_URL_HERE" target="_blank" class="github-link" title="View on GitHub">
         <i data-lucide="github"></i>
         <span>View Code</span>
@@ -17,7 +23,7 @@
 
     <div class="app-wrapper">
         <header>
-            <h1>Fridge Co-Pilot</h1>
+            <h1>Fridge Co-Pilot🧑🏻‍🍳</h1>
             <p>Snap a photo, get a meal plan.</p>
         </header>
 
@@ -25,7 +31,7 @@
             <div class="upload-card">
                 <input type="file" id="imageInput" hidden accept="image/*">
                 <label for="imageInput" class="drop-zone" id="dropZone">
-                    <span id="uploadText">Click or Drag Fridge Photo Here</span>
+                    <span id="uploadText">Click or Drag a Photo of your Fridge Here</span>
                     <img id="preview" src="" alt="Preview" class="hidden">
                 </label>
                 
